# wechat-sdk-qclaw

./: .gitignore  README.md  pyproject.toml
src/qclaw/: __init__.py  api.py  auth.py  config.py  core.py  message.py  reply.py  utils.py
src/qclaw/transport/: __init__.py  protocol.py  websocket.py
