[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-sdk-qclaw"
version = "0.1.0"
description = "QChat WeChat chatbot SDK — ItChat-style API for OpenClaw"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25",
    "websockets>=12.0",
]

[project.optional-dependencies]
qrcode = ["qrcode[pil]"]

[tool.setuptools.packages.find]
where = ["src"]
